--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ting Gong | Neuroimaging Research</title>
+		<title>Ting Gong | Microstructure Imaging</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -65,8 +65,8 @@
 										    </p>
 
 											<p>
-											I also contribute to several NIH-funded projects, including the <b><a href="https://connects.mgh.harvard.edu/">
-												BRAIN CONNECTS Center for Large-Scale Imaging of Neural Circuits (LINC)</a></b>, 
+											I also contribute to several projects funded by the National Institute of Neurological Disorders and Stroke (NINDS), 
+											including the <b><a href="https://connects.mgh.harvard.edu/"> BRAIN CONNECTS Center for Large-Scale Imaging of Neural Circuits (LINC)</a></b>, 
 											where I develop MRI protocols and analysis methods for high-resolution, multi-dimensional scans of ex vivo human and macaque brains.
 											This work leverages ultra-high-gradient MRI systems to advance and validate non-invasive imaging techniques. 
 											</p>
