--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 									<li><a href="mailto: tgong1@mgh.harvard.edu" class="fa-solid fa-envelope fa-2x icon-no-color alt"><span class="label"></span></a></li>
 								</ul>
 							</div>
-							<span class="image"><img src="images/avater2021_dark.jpg" alt="" /></span>
+							<span class="image"><img src="images/20250823.jpg" alt="" /></span>
 						</div>
 					</header>
 
@@ -90,7 +90,6 @@
 									<li>Magna Cum Laude Merit Award, ISMRM 2019</li>
 									</p>
 								</header>
-
 							</section>
 					</div>
 				<!-- Footer -->
