--- a/cv.html
+++ b/cv.html
@@ -91,13 +91,13 @@
 									<li>Li Z*, <b>Gong T*</b>, Lin Z, He H, Tong Q, Li C, Sun Y, Yu F, Zhong J. Fast and robust diffusion kurtosis parametric mapping using a three-dimensional convolutional neural network. IEEE Access. 2019 May 27;7:71398-411.
 										[<b><a href=https://ieeexplore.ieee.org/abstract/document/8723313>Link</a></b>]
 									</li>	
-									<li>Karamched SR, Gorup D, Tolomeo D, Brooks LJ, <b>Gong T</b>, Jørgensen AC, Hill CS, Clements M, Kalber TL, Wells JA, Stuckey DJ. Detecting glioblastoma infiltration beyond conventional imaging tumour margins using MTE-NODDI. Imaging Neuroscience. 2025 Feb 18;3:imag_a_00472.            
+									<li>Karamched SR, Gorup D, Tolomeo D, Brooks LJ, <b>Gong T</b>, Jørgensen AC, Hill CS, Clements M, Kalber TL, Wells JA, Stuckey DJ, Thorne L, Shahrezaei V, Marguerat S, Zhang H, Parrinello S, Lythgoe MF. Detecting glioblastoma infiltration beyond conventional imaging tumour margins using MTE-NODDI. Imaging Neuroscience. 2025 Feb 18;3:imag_a_00472.            
 										[<b><a href=https://direct.mit.edu/imag/article/doi/10.1162/imag_a_00472/127770>Link</a></b>]
 									</li>									
-									<li>Liao C, Cao X, Iyer SS, Schauman S, Zhou Z, Yan X, Chen Q, Li Z, Wang N, <b>Gong T</b>, Wu Z. High‐resolution myelin‐water fraction and quantitative relaxation mapping using 3D ViSTa‐MR fingerprinting. Magnetic resonance in medicine. 2024 Jun;91(6):2278-93. 
+									<li>Liao C, Cao X, Iyer SS, Schauman S, Zhou Z, Yan X, Chen Q, Li Z, Wang N, <b>Gong T</b>, Wu Z, He H, Zhong J, Yang Y, Kerr A, Grill‐Spector K, Setsompop K. High‐resolution myelin‐water fraction and quantitative relaxation mapping using 3D ViSTa‐MR fingerprinting. Magnetic resonance in medicine. 2024 Jun;91(6):2278-93. 
 										[<b><a href=https://onlinelibrary.wiley.com/doi/abs/10.1002/mrm.29990>Link</a></b>]
 									</li>
-									<li>Cao X, Liao C, Iyer SS, Wang Z, Zhou Z, Dai E, Liberman G, Dong Z, <b>Gong T</b>, He H, Zhong J. Optimized multi‐axis spiral projection MR fingerprinting with subspace reconstruction for rapid whole‐brain high‐isotropic‐resolution quantitative imaging. Magnetic Resonance in Medicine. 2022 Jul;88(1):133-50.
+									<li>Cao X, Liao C, Iyer SS, Wang Z, Zhou Z, Dai E, Liberman G, Dong Z, <b>Gong T</b>, He H, Zhong J, Bilgic B, Setsompop K. Optimized multi‐axis spiral projection MR fingerprinting with subspace reconstruction for rapid whole‐brain high‐isotropic‐resolution quantitative imaging. Magnetic Resonance in Medicine. 2022 Jul;88(1):133-50.
 										[<b><a href=https://doi.org/10.1002/mrm.29194>Link</a></b>]
 									</li>
 									<li>Tong Q, He H, <b>Gong T</b>, Li C, Liang P, Qian T, Sun Y, Ding Q, Li K, Zhong J. Multicenter dataset of multi-shell diffusion MRI in healthy traveling adults with identical settings. Scientific Data. 2020 May 27;7(1):157.
@@ -106,7 +106,7 @@
 									<li>Tong Q, He H, <b>Gong T</b>, Li C, Liang P, Qian T, Sun Y, Ding Q, Li K, Zhong J. Reproducibility of multi-shell diffusion tractography on traveling subjects: a multicenter study prospective. Magnetic resonance imaging. 2019 Jun 1;59:1-9.
 										[<b><a href=https://doi.org/10.1016/j.mri.2019.02.011>Link</a></b>]
 									</li>
-									<li>Tan X, Gao J, Zhou Z, Wei R, <b>Gong T</b>, Wu Y, Liu K, He F, Wang J, Li J, Zhang X. Spontaneous recovery from unresponsive wakefulness syndrome to a minimally conscious state: early structural changes revealed by 7-T magnetic resonance imaging. Frontiers in Neurology. 2018 Jan 17;8:741.
+									<li>Tan X, Gao J, Zhou Z, Wei R, <b>Gong T</b>, Wu Y, Liu K, He F, Wang J, Li J, Zhang X, Pan G, Luo B. Spontaneous recovery from unresponsive wakefulness syndrome to a minimally conscious state: early structural changes revealed by 7-T magnetic resonance imaging. Frontiers in Neurology. 2018 Jan 17;8:741.
 										[<b><a href=https://doi.org/10.3389/fneur.2017.00741>Link</a></b>]
 									</li>
 										<p> </p>
