--- a/cv.html
+++ b/cv.html
@@ -28,9 +28,14 @@
 					<div id="main">
 
 						<!-- Content -->
+							<section id="appointment" class="main">
+								<h2>Academic appointment</h2>
+									<li>Instructor in Radiology, Massachusetts General Hospital and Harvard Medical School, Boston, MA, US (Jan 2026 - )</li>
+							</section>
+
 							<section id="education" class="main">
 								<h2>Education & Training</h2>
-									<li>Research Fellow, Massachusetts General Hospital, Boston, MA, US (Nov 2022 - present)</li>
+									<li>Research Fellow, Massachusetts General Hospital, Boston, MA, US (Nov 2022 - Dec 2025)</li>
 									<li>Research Fellow, Department of Computer Science, University College London, London, UK (Sep 2020 - Oct 2022)</li>
 									<li>PhD in Biomedical Engineering, Zhejiang University, Hangzhou, China (Sep 2015 - Dec 2020)</li>
 							</section>
@@ -46,26 +51,33 @@
 
 							<section id="talks" class="main">
 								<h2>Talks</h2>
+								    <li><b><a href="https://radiology.ucsf.edu/events/advancing-microstructure-imaging-high-gradient-strength-mri-and-machine-learning">Invited Talk, 2025</a></b>, University of California, San Fransisco </li>
+									<li><b><a href="https://www.brain-connects.org/events/2025-annual-meeting">BRAIN CONNECTS Annual Meeting, 2025</a></b>, San Diego </li>
 									<li><b><a href="https://cbiweb.net/radiology-research-forum/index.html#2024-10-09-gong">Lecture Series at Radiology Research Forum 2024</a></b>, New York University </li>
-									<li>Boston Medical Image Analysis Workshop 2024, MIT</li>
-									<li><b><a href="http://cmic.cs.ucl.ac.uk/miml/programme.html">MIML 2022</a></b> – Microstructure Imaging Meets Machine Learning, UCL</li>	
+									<li>Boston Medical Image Analysis Workshop 2024, MIT, Cambridge MA</li>
+									<li><b><a href="http://cmic.cs.ucl.ac.uk/miml/programme.html">MIML 2022</a></b> – Microstructure Imaging Meets Machine Learning, UCL, London</li>	
 									<li>Oral presentation at ISMRM 2018, 2022, 2023</li>
 									<li>Oral power pitch at ISMRM 2018, 2019, 2025</li>
 							</section>
 
 							<section id="activities" class="main">
 								<h2>Professional activities</h2>
+								<li>Co-organizer, Boston Medical Image Analysis Workshop 2025, MIT, Cambridge MA</li>
 								<li>Language moderator, <b><a href="https://submissions.mirasmart.com/ISMRM2025/Itinerary/ConferenceMatrixEventDetail.aspx?ses=O-17">ISMRM 2025 – AI-powered segmentation</a></b></li>
 								<li>Project mentor, <b><a href="https://www.ucl.ac.uk/medical-image-computing/ucl-medical-image-computing-summer-school-medicss">MedICSS 2022</a></b></li>
 								<li>Co-organizer, <b><a href="http://cmic.cs.ucl.ac.uk/miml/index.html">MIML workshop 2022</a></b> – Microstructure Imaging Meets Machine Learning</li>
 								<li>Co-organizer, <b><a href="https://www.ismrm.org/22/program-files/MIS-12.htm">ISMRM 2022 Member-initiated Symposium</a></b> – Harnessing Histology for Microstructure Imaging</li>
-								<li><p>Reviewer for IEEE Transactions on Medical Imaging, PNAS, Imaging Neuroscience, MRM, MRI, NMR in Biomedicine</li>
+								<li><p>Ad hoc Reviewer for IEEE Transactions on Medical Imaging, PNAS, Imaging Neuroscience, MRM, MRI, NMR in Biomedicine, Neuroinformatics, Developmental Cognitive Neuroscience</li>
 							</section>
 
 							<section id="publications" class="main">
 								<h2>Publications</h2>
 								<h3>Jounal acticles</h3>
 								<p>(* Authors with equal contribution)</p>
+									<li><b>Gong T</b>, Yendiki A. Microstructure. jl: a Julia Package for Probabilistic Microstructure Model Fitting with Diffusion MRI. Imaging Neuroscience. 2025 Dec.
+										[<b><a href=https://doi.org/10.1162/IMAG.a.1102>Link</a></b>]
+										[<b><a href=https://github.com/Tinggong/Microstructure.jl>Code</a></b>]
+									</li>
 									<li>Wongkornchaovalit P, Shao B, Li L, Chen Y, He H, Zhong J, <b>Gong T</b>. Multi-TE Diffusion MRI Dataset for Exploring Combined Diffusion-Relaxometry Methods in Microstructure Imaging. Scientific Data. 2025 Jul 10;12(1):1191. 
 										[<b><a href="https://www.nature.com/articles/s41597-025-05544-1">Link</a></b>]
 										[<b><a href="https://doi.org/10.57760/sciencedb.o00133.00038">Data</a></b>]
@@ -112,10 +124,6 @@
 										<p> </p>
 
 								<h3>Pre-prints</h3>	
-									<li><b>Gong T</b>, Yendiki A. Microstructure. jl: a Julia Package for Probabilistic Microstructure Model Fitting with Diffusion MRI. arXiv preprint arXiv:2407.06379. 2024 Jul 8.
-										[<b><a href=https://arxiv.org/abs/2407.06379>Link</a></b>]
-										[<b><a href=https://github.com/Tinggong/Microstructure.jl>Code</a></b>]
-									</li>
 									<li><b>Gong T</b>, Fair MJ, Setsompop K, Zhang H. Compartment-specific estimation of T2 and T2* with diffusion-PEPTIDE MRI. arXiv preprint arXiv:2408.10432. 2024 Aug 19.
 										[<b><a href=https://arxiv.org/abs/2408.10432>Link</a></b>]
 									</li>
