--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<header class="major">
 											<h2>Home</h2>
 											<p>
-											I’m a research fellow at the Martinos Center for Biomedical Imaging at Massachusetts General Hospital. 
+											I am a <b><a href="https://connects.catalyst.harvard.edu/Profiles/display/Person/210128">faculty member</a></b> at the Martinos Center for Biomedical Imaging at Massachusetts General Hospital. 
 											My work focuses on developing non-invasive, quantitative MRI techniques to study brain tissue microstructure, 
 											with the goal of understanding how the brain changes over time and in different conditions.
 											</p>
