--- a/cv.html
+++ b/cv.html
@@ -42,7 +42,7 @@
 							
 							<section id="award" class="main">
 								<h2>Awards</h2>
-									<li>NIH Pathway to Independence Award (K99/R00), NIBIB 2025</li>
+									<li><b><a href="https://reporter.nih.gov/search/RCjl1ymk2U2nBE1RxqsxkQ/project-details/11137185">NIH Pathway to Independence Award (K99/R00)</a></b>, NIBIB 2025</li>
 									<li>Summa Cum Laude Merit Award, ISMRM <b><a href="https://archive.ismrm.org/2023/0766.html">2023</a></b>, <b><a href="https://submissions.mirasmart.com/ISMRM2025/Itinerary/PresentationDetail.aspx?evdid=2189">2025</a></b></li>
 									<li>Strategic Research Fund, University College London, 2022</li>
 									<li>Magna Cum Laude Merit Award, ISMRM 2019</li>
@@ -51,7 +51,7 @@
 
 							<section id="talks" class="main">
 								<h2>Talks</h2>
-								    <li><b><a href="https://radiology.ucsf.edu/events/advancing-microstructure-imaging-high-gradient-strength-mri-and-machine-learning">Invited Talk, 2025</a></b>, University of California, San Fransisco </li>
+								    <li><b><a href="https://radiology.ucsf.edu/events/advancing-microstructure-imaging-high-gradient-strength-mri-and-machine-learning">Invited Talk, 2025</a></b>, University of California, San Francisco </li>
 									<li><b><a href="https://www.brain-connects.org/events/2025-annual-meeting">BRAIN CONNECTS Annual Meeting, 2025</a></b>, San Diego </li>
 									<li><b><a href="https://cbiweb.net/radiology-research-forum/index.html#2024-10-09-gong">Lecture Series at Radiology Research Forum 2024</a></b>, New York University </li>
 									<li>Boston Medical Image Analysis Workshop 2024, MIT, Cambridge MA</li>
@@ -124,6 +124,12 @@
 										<p> </p>
 
 								<h3>Pre-prints</h3>	
+									<li><b>Gong T</b>, Maffei C, Sung D, Bell E, Wu J, Shao J, Rosenblum EW, Zeng X, Ramos-Llorden G, Müller A, Mahmutovic M, Keil B, Gunalan K, Ghosh S, Augustinack JC, Huang SY, Haber SN, Yendiki A. Multi-dimensional diffusion MRI at ultra-high gradient strength for mapping axonal architecture and microstructure in the primate brain.
+										[<b><a href=https://doi.org/10.64898/2026.02.18.705310>Link</a></b>]
+									</li>
+									<li>Maffei C, Celestine MR , <b>Gong T</b>, Jones R, Dann E, Lehman J, Augustinack JC, Wang H, Haber SN, Yendiki A. The modular nature of long-association pathways in the human brain. 
+										[<b><a href=https://doi.org/10.64898/2026.01.07.698021>Link</a></b>]
+									</li>
 									<li><b>Gong T</b>, Fair MJ, Setsompop K, Zhang H. Compartment-specific estimation of T2 and T2* with diffusion-PEPTIDE MRI. arXiv preprint arXiv:2408.10432. 2024 Aug 19.
 										[<b><a href=https://arxiv.org/abs/2408.10432>Link</a></b>]
 									</li>
